--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "dependencies": {
     "@angular/animations": "^18.0.4",
     "@angular/cdk": "^18.0.4",
-    "@angular/common": "^18.0.4",
-    "@angular/compiler": "^18.0.4",
-    "@angular/core": "^18.0.4",
-    "@angular/forms": "^18.0.4",
+    "@angular/common": "18.0.4",
+    "@angular/compiler": "18.0.4",
+    "@angular/core": "18.0.4",
+    "@angular/forms": "18.0.4",
     "@angular/google-maps": "^18.0.4",
-    "@angular/platform-browser": "^18.0.4",
-    "@angular/platform-browser-dynamic": "^18.0.4",
-    "@angular/router": "^18.0.4",
+    "@angular/platform-browser": "18.0.4",
+    "@angular/platform-browser-dynamic": "18.0.4",
+    "@angular/router": "18.0.4",
     "@ckeditor/ckeditor5-angular": "^8.0.0",
     "@ckeditor/ckeditor5-build-classic": "^44.0.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
@@ -71,10 +71,10 @@
     "zone.js": "^0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.5",
-    "@angular/cli": "^18.0.5",
+    "@angular-devkit/build-angular": "^18.0.4",
+    "@angular/cli": "18.0.4",
     "@angular/compiler-cli": "^18.0.4",
-    "@angular/localize": "^18.2.11",
+    "@angular/localize": "^18.0.4",
     "@types/axios": "^0.9.36",
     "@types/chart.js": "^2.9.41",
     "@types/dragula": "^3.7.5",
