--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@ngrx/effects": "^18.0.0",
     "@ngrx/store": "^18.0.0",
     "@ngrx/store-devtools": "^18.0.0",
-    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/core": "15",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
     "@weavy/uikit-web": "^25.2.0",
@@ -59,6 +59,7 @@
     "ngx-drag-drop": "^17.0.0",
     "ngx-dropzone-wrapper": "^16.0.0",
     "ngx-editor": "17.5.4",
+    "ngx-float-ui": "18",
     "ngx-mask": "^17.0.8",
     "ngx-pagination": "^6.0.3",
     "ngx-quill": "^26.0.4",
@@ -66,6 +67,8 @@
     "quill": "^2.0.2",
     "rxjs": "^7.8.1",
     "simplebar-angular": "^3.2.6",
+    "stream-chat": "^8.49.0",
+    "stream-chat-angular": "^5.11.1",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.6.3",
     "zone.js": "^0.14.7"
