home page created and carosoul implemented

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "lib": ["ES2022", "dom"],
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": ["./src/*"],
       "@lib/*": ["./src/lib/*"],
