--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/hyper",
+            "outputPath": {
+              "base": "dist/hyper",
+              "browser": ""
+            }, 
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["src/polyfills.ts"],
